<resources>
    <string name="app_name">FunMap</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_menu_event">Events</string>
    <string name="drawer_menu_gallery">Gallery</string>
    <string name="drawer_menu_message">Message</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_about">About</string>
    <string name="drawer_menu_git">GitHub Repo</string>
    <string name="drawer_menu_author">Author</string>
    <string name="et_search">Search</string>
    <string name="tv_discover">Discover Nearby</string>
    <string name="slide">Explore Nearby!</string>
    <string name="hide">Hide</string>
    <string name="btn_picture">Picture</string>
    <string name="btn_event">Event</string>

    <string name="np_cancel">Cancel</string>
    <string name="np_set">Set</string>
    <string name="np_title">Choose the range(miles)</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="fa_times">{fa-times}</string>
    <string name="fa_thumbs_o_up">{fa-thumbs-o-up}</string>
    <string name="fa_star_o">{fa-star-o}</string>
    <string name="fa_thumbs_up">{fa-thumbs-up}</string>
    <string name="fa_star">{fa-star}</string>
    <string name="confirm">Confirm</string>
    <string name="access_control">Access control</string>
    <string name="time_period">Time Period (Local Time)</string>
    <string name="every_day">Every Day</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="register">Register</string>
    <string name="repeat_password">Password Again</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Not Registered? Sign up now!</string>

    <!--Notify-->
    <string name="notify_log_in">Signed in as %s!</string>
    <string name="notify_log_out">Logged out!</string>

    <!--Errors-->
    <string name="cropping_error">Cropping error</string>
    <string name="net_error">Please check your network.</string>
    <string name="upload_error">Upload error! Please check your account or network!</string>
    <string name="login_psw_error">Login error! Please check your password and email combination!</string>
    <string name="login_username_error">Login error! Username does not exist!</string>
    <string name="title_empty_error">Title can\'t be empty!</string>
    <string name="date_error">Please assign an End Time Later than Start Time</string>
    <string name="marker_null_error">Sorry! Parcel problem occurs!</string>
    <string name="img_empty_error">Sorry! No images have taken.</string>
    <string name="forget_password">Forget password?</string>
    <string name="user_less_than">Length is at least %d characters</string>
    <string name="psw_less_than">Length is at least %d digits</string>


    <string-array name="access_control_array">
        <item>Private</item>
        <item>Public</item>
    </string-array>
</resources>
