<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/np_title"
        android:textSize="16sp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"/>

    <NumberPicker
        android:id="@+id/np_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_np_cancel"
            android:layout_width="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_marginRight="@dimen/fab_margin"
            android:text="@string/np_cancel" />

        <Button
            android:id="@+id/btn_np_set"
            android:layout_width="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/np_set" />

    </LinearLayout>
</LinearLayout>