<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/nav_header_vertical_spacing">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="150">

                <EditText
                    android:id="@+id/et_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="5" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/access_control"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/nav_header_vertical_spacing"
                android:entries="@array/access_control_array" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/btn_picture"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <me.vigroid.funmap.core.ui.widget.AutoPhotoLayout
                android:id="@+id/custom_auto_photo_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
                android:layout_marginRight="@dimen/nav_header_vertical_spacing"
                android:layout_marginStart="@dimen/nav_header_vertical_spacing"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                app:icon_size="10sp"
                app:item_margin="3"
                app:line_count="5"
                app:max_count="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/time_period"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:orientation="vertical"
                android:padding="@dimen/padding">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/ictv_clock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="{fa-clock-o}"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_toEndOf="@id/ictv_clock"
                        android:layout_toRightOf="@id/ictv_clock"
                        android:text="@string/every_day"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:theme="@style/Widget.AppCompat.CompoundButton.Switch" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/ictv_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="{fa-hourglass-start}"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_toEndOf="@+id/ictv_start"
                        android:layout_toRightOf="@+id/ictv_start"
                        android:text="Fri,Feb,2,2018"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="1:00 AM"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/ictv_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="{fa-hourglass-end}"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_toEndOf="@+id/ictv_end"
                        android:layout_toRightOf="@+id/ictv_end"
                        android:text="Fri,Feb,2,2018"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="2:00 AM"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_create_event_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/nav_header_vertical_spacing"
            android:layout_marginRight="@dimen/nav_header_vertical_spacing"
            android:layout_weight="1"
            android:text="@string/np_cancel" />

        <Button
            android:id="@+id/btn_create_event_confirm"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/confirm" />

    </LinearLayout>

</LinearLayout>